--- a/pages/setting/index.wxml
+++ b/pages/setting/index.wxml
@@ -1,5 +1,5 @@
 <van-cell title="修改个人信息" is-link bind:click="linkEdit" />
 <wux-white-space />
-<van-cell title="使用说明" is-link />
+<van-cell title="识别订单二维码" is-link bind:click="showCamare" />
 <wux-white-space />
 <van-cell title="退出登录" is-link bind:click="loginOut" />
