商品展示销售次数

--- a/components/water-card/index.wxml
+++ b/components/water-card/index.wxml
@@ -5,6 +5,7 @@
       <view class='price-container'>
         <l-price unit="￥" value="{{data.count}}" value-color="#ad0e11" unit-color="#ad0e11" value-size="36"></l-price>
       </view>
+      <view class='art-sale'>总销售 {{data.saleNum}} 次</view>
     </view>
   </l-card>
 </view>
