优化请求次数

--- a/pages/good-detail/index.wxml
+++ b/pages/good-detail/index.wxml
@@ -58,5 +58,11 @@
         <view>{{sellAll}}</view>
       </view>
     </view>
+    <view class="line" wx:if="{{desc}}">
+      <view class="item">
+        <view>商品描述</view>
+        <view>{{desc}}</view>
+      </view>
+    </view>
   </view>
 </view>
