--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -17,7 +17,7 @@
       <view class="line-bottom">
         <van-index-anchor index="{{ item.key }}" />
       </view>
-      <view class="good-box" wx:for="{{item.list}}" wx:for-item="todu" wx:key data-id="{{todu.id}}">
+      <view class="good-box" wx:for="{{item.list}}" wx:for-item="todu" wx:for-index="i" wx:key="i" data-id="{{todu.id}}">
         <view class="cu-avatar round lg" style="background-image:url({{todu.coverImg}});" bindtap="viewImg" data-item="{{todu.coverImg}}"></view>
         <view class="good-content" bindtap="onProduct" data-id="{{todu.id}}">
           <view class="good-name">{{todu.name}}</view>
@@ -46,7 +46,7 @@
           <text class="cuIcon-title text-green"></text>
           {{item.name}}
         </view>
-        <view class="good-box" wx:for="{{item.children}}" wx:for-item="todu" wx:key data-id="{{todu.id}}">
+        <view class="good-box" wx:for="{{item.children}}" wx:for-item="todu" wx:for-index="i" wx:key="i" data-id="{{todu.id}}">
           <view class="cu-avatar round lg" style="background-image:url({{todu.coverImg}});" bindtap="viewImg" data-item="{{todu.coverImg}}"></view>
           <view class="good-content" bindtap="onProduct" data-id="{{todu.id}}">
             <view class="good-name">{{todu.name}}</view>
