--- a/pages/good/index.wxml
+++ b/pages/good/index.wxml
@@ -31,7 +31,7 @@
               <view wx:if="{{todu.num != '1'}}" class="good-num">1{{todu.unitDouble.name}} = {{todu.num}}{{todu.unitOne.name}}</view>
               <view class="good-num">总销售 {{todu.saleNum}} 次</view>
               <view class="good-price">
-                <text>￥</text>{{todu.sellSingle}}
+                <text class="icon-price">￥</text>{{todu.sellSingle}}<text wx:if="{{todu.sellSingle !== todu.sellAll}}">/<text class="icon-price">￥</text>{{todu.sellAll}}</text>
               </view>
             </view>
             <view class="good-btn" wx:if="{{ userInfo.role_name === 'admin' }}">
