--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -24,7 +24,7 @@
           <view wx:if="{{todu.num != '1'}}" class="good-num">1{{todu.unitDouble.name}} = {{todu.num}}{{todu.unitOne.name}}</view>
           <view class="good-num">总销售 {{todu.saleNum}} 次</view>
           <view class="good-price">
-            <text>￥</text>{{todu.sellSingle}}
+            <text class="icon-price">￥</text>{{todu.sellSingle}}<text wx:if="{{todu.sellSingle !== todu.sellAll}}">/<text class="icon-price">￥</text>{{todu.sellAll}}</text>
           </view>
         </view>
         <view class="good-btn {{checked && 'good-btn-right'}}" bindtap="showSpace" data-item="{{todu}}">选规格<wux-badge class="good-btn-badge" count="{{countInfo[todu.id]}}" overflowCount="99" /></view>
@@ -53,7 +53,7 @@
             <view wx:if="{{todu.num != '1'}}" class="good-num">1{{todu.unitDouble.name}} = {{todu.num}}{{todu.unitOne.name}}</view>
             <view class="good-num">总销售 {{todu.saleNum}} 次</view>
             <view class="good-price">
-              <text>￥</text>{{todu.sellSingle}}
+              <text class="icon-price">￥</text>{{todu.sellSingle}}<text wx:if="{{todu.sellSingle !== todu.sellAll}}">/<text class="icon-price">￥</text>{{todu.sellAll}}</text>
             </view>
           </view>
           <view class="good-btn" bindtap="showSpace" data-item="{{todu}}">选规格<wux-badge class="good-btn-badge" count="{{countInfo[todu.id]}}" overflowCount="99" /></view>
