--- a/components/water-card/index.wxml
+++ b/components/water-card/index.wxml
@@ -1,9 +1,9 @@
 <view class="card-box">
-  <l-card full type="cover" image="{{data.image}}" title="{{data.title}}" l-class="life-container" l-img-class="life-img" l-title-class="life-title" bindtap="onProduct">
+  <l-card full type="cover" image="{{data.coverImg}}" title="{{data.title}}" l-class="life-container" l-img-class="life-img" l-title-class="life-title" bindtap="onProduct">
     <view class='life-product-contianer'>
-      <view class='art-content'>{{data.describe}}</view>
+      <view class='art-content'>{{data.desc}}</view>
       <view class='price-container'>
-        <l-price unit="￥" value="{{data.count}}" value-color="#ad0e11" unit-color="#ad0e11" value-size="36"></l-price>
+        <l-price unit="￥" value="{{data.sellSingle}}" value-color="#ad0e11" unit-color="#ad0e11" value-size="36"></l-price>
       </view>
       <view class='art-sale'>总销售 {{data.saleNum}} 次</view>
     </view>
