--- a/pages/good/index.wxml
+++ b/pages/good/index.wxml
@@ -26,7 +26,7 @@
         <van-swipe-cell right-width="{{ 65 }}" wx:for="{{item.children}}" wx:for-item="todu" wx:for-index="i" wx:key data-id="{{todu.id}}" disabled="{{ userInfo.role_name !== 'admin'}}">
           <view class="good-box">
             <view class="cu-avatar round lg" style="background-image:url({{todu.coverImg}});" bindtap="viewImg" data-item="{{todu.coverImg}}"></view>
-            <view class="good-content" bindtap="linkDetail" data-item="{{todu}}" data-id="{{todu.id}}">
+            <view class="good-content" bindtap="linkDetail" data-item="{{todu}}">
               <view class="good-name">{{todu.name}}</view>
               <view wx:if="{{todu.num != '1'}}" class="good-num">1{{todu.unitDouble.name}} = {{todu.num}}{{todu.unitOne.name}}</view>
               <view class="good-num">总销售 {{todu.saleNum}} 次</view>
