--- a/pages/order/index.wxml
+++ b/pages/order/index.wxml
@@ -20,38 +20,40 @@
     <van-tab title="已取消"></van-tab>
   </van-tabs>
 </view>
-<view wx:for="{{orderList}}" wx:key class="order-item" bindtap="linkDetail" data-id="{{item.id}}">
-  <view wx:if="{{active === 0}}">
-    <state-box state="{{item.state}}" />
-  </view>
-  <van-cell>
+<view bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd">
+  <view wx:for="{{orderList}}" wx:key class="order-item" catchtap="linkDetail" data-id="{{item.id}}">
+    <view wx:if="{{active === 0}}">
+      <state-box state="{{item.state}}" />
+    </view>
+    <van-cell>
+        <view slot="title" class="order-line">
+        <text>订单编号</text>
+        <l-tag shape="square" bg-color="orange">{{item.id}}</l-tag>
+        <!-- <text class="red">{{item.id}}</text> -->
+      </view>  
+    </van-cell>
+    <van-cell>
       <view slot="title" class="order-line">
-      <text>订单编号</text>
-      <l-tag shape="square" bg-color="orange">{{item.id}}</l-tag>
-      <!-- <text class="red">{{item.id}}</text> -->
-    </view>  
-  </van-cell>
-  <van-cell>
-    <view slot="title" class="order-line">
-      <text>订单金额</text>
-      <text class="red txt-bg">{{item.total}}</text>
-    </view>
-  </van-cell>
-  <van-cell>
-    <view slot="title" class="order-line">
-      <text>订单状态</text>
-      <text class="red">{{item.state === 1 ? '待付款' : item.state === 2 ? '待发货' : item.state === 3 ? '已完成' : '已取消'}}</text>
-    </view>
-  </van-cell>
-  <van-cell wx:if="{{item.customerName}}" title="客户姓名" value="{{item.customerName}}" />
-  <van-cell wx:if="{{item.customerPhone}}" title="客户手机" value="{{item.customerPhone}}" />
-  <van-cell wx:if="{{item.customerSite}}" title="客户地址" value="{{item.customerSite}}" border="{{ false }}" />
-  <wux-white-space />
-  <van-steps
-    wx:if="{{item.state !== 4}}"
-    steps="{{ item.steps }}"
-    active="{{ item.active }}"
-  />
+        <text>订单金额</text>
+        <text class="red txt-bg">{{item.total}}</text>
+      </view>
+    </van-cell>
+    <van-cell>
+      <view slot="title" class="order-line">
+        <text>订单状态</text>
+        <text class="red">{{item.state === 1 ? '待付款' : item.state === 2 ? '待发货' : item.state === 3 ? '已完成' : '已取消'}}</text>
+      </view>
+    </van-cell>
+    <van-cell wx:if="{{item.customerName}}" title="客户姓名" value="{{item.customerName}}" />
+    <van-cell wx:if="{{item.customerPhone}}" title="客户手机" value="{{item.customerPhone}}" />
+    <van-cell wx:if="{{item.customerSite}}" title="客户地址" value="{{item.customerSite}}" border="{{ false }}" />
+    <wux-white-space />
+    <van-steps
+      wx:if="{{item.state !== 4}}"
+      steps="{{ item.steps }}"
+      active="{{ item.active }}"
+    />
+  </view>
 </view>
 <loadmore
   wx:if="{{orderList.length > 0}}"
