--- a/pages/ship/index.wxml
+++ b/pages/ship/index.wxml
@@ -7,78 +7,82 @@
     <van-tab title="已发货"></van-tab>
   </van-tabs>
 </view>
-<!-- 未发货 -->
-<view hidden="{{active == 1}}" class="good-box {{isIpx && 'good-box-iphonex'}}">
-  <view class="good-item {{item.ani && 'hide-line'}}" wx:for="{{unShipList}}" wx:key>
-    <van-checkbox
-      value="{{ item.isChecked }}"
-      bind:change="onChange"
-      data-index="{{index}}"
-      data-type="unShipList"
-      data-check="{{1}}"
-      data-id="{{item.id}}"
-      disabled="{{item.disabled}}"
-    />
-    <image src="{{item.coverImg}}" mode="aspectFill" />
-    <view class="good-info">
-      <view class="good-name">{{item.name}}</view>
-      <view class="good-tip"><text>已选规格：</text>{{item.num}}{{item.unitType === 1 ? item.unitSingle : item.unitAll}}、单价：{{item.sale}}</view>
-      <view class="space-info">
-        <view class="space-price">
-          <text>总价：</text>
-          <text>￥</text>
-          {{item.total}}
+<view class="touch-box" bindtouchstart="touchStart" bindtouchmove="touchMove" bindtouchend="touchEnd">
+  <!-- 未发货 -->
+  <view hidden="{{active == 1}}" class="good-box {{isIpx && 'good-box-iphonex'}}">
+    <view class="good-item {{item.ani && 'hide-line'}}" wx:for="{{unShipList}}" wx:key>
+      <van-checkbox
+        custom-class="icon-check"
+        value="{{ item.isChecked }}"
+        bind:change="onChange"
+        data-index="{{index}}"
+        data-type="unShipList"
+        data-check="{{1}}"
+        data-id="{{item.id}}"
+        disabled="{{item.disabled}}"
+      />
+      <image src="{{item.coverImg}}" mode="aspectFill" />
+      <view class="good-info">
+        <view class="good-name">{{item.name}}</view>
+        <view class="good-tip"><text>已选规格：</text>{{item.num}}{{item.unitType === 1 ? item.unitSingle : item.unitAll}}、单价：{{item.sale}}</view>
+        <view class="space-info">
+          <view class="space-price">
+            <text>总价：</text>
+            <text>￥</text>
+            {{item.total}}
+          </view>
         </view>
       </view>
     </view>
   </view>
-</view>
-<!-- 已发货 -->
-<view hidden="{{active === 0}}" class="good-box {{isIpx && 'good-box-iphonex'}}">
-  <view class="good-item {{item.ani && 'hide-line-left'}}" wx:for="{{shipList}}" wx:key>
-    <van-checkbox
-      value="{{ item.isChecked }}"
-      bind:change="onChange"
-      data-index="{{index}}"
-      data-type="shipList"
-      data-check="{{0}}"
-      data-id="{{item.id}}"
-      disabled="{{item.disabled}}"
-    />
-    <image src="{{item.coverImg}}" mode="aspectFill" />
-    <view class="good-info">
-      <view class="good-name">{{item.name}}</view>
-      <view class="good-tip"><text>已选规格：</text>{{item.num}}{{item.unitType === 1 ? item.unitSingle : item.unitAll}}、单价：{{item.sale}}</view>
-      <view class="space-info">
-        <view class="space-price">
-          <text>总价：</text>
-          <text>￥</text>
-          {{item.total}}
+  <!-- 已发货 -->
+  <view hidden="{{active === 0}}" class="good-box {{isIpx && 'good-box-iphonex'}}">
+    <view class="good-item {{item.ani && 'hide-line-left'}}" wx:for="{{shipList}}" wx:key>
+      <van-checkbox
+        custom-class="icon-check"
+        value="{{ item.isChecked }}"
+        bind:change="onChange"
+        data-index="{{index}}"
+        data-type="shipList"
+        data-check="{{0}}"
+        data-id="{{item.id}}"
+        disabled="{{item.disabled}}"
+      />
+      <image src="{{item.coverImg}}" mode="aspectFill" />
+      <view class="good-info">
+        <view class="good-name">{{item.name}}</view>
+        <view class="good-tip"><text>已选规格：</text>{{item.num}}{{item.unitType === 1 ? item.unitSingle : item.unitAll}}、单价：{{item.sale}}</view>
+        <view class="space-info">
+          <view class="space-price">
+            <text>总价：</text>
+            <text>￥</text>
+            {{item.total}}
+          </view>
         </view>
       </view>
     </view>
   </view>
+  
+  <!-- 未发货为空 -->
+  <empty-show
+    visible="{{ active === 0 && unShipList.length === 0 && !loading }}"
+    icon="{{ msgUnShip.icon }}"
+    title="{{ msgUnShip.title }}"
+    buttons="{{ msgUnShip.buttons }}"
+    bind:click="buttonClicked"
+    data-active="{{ 1 }}"
+  />
+  
+  <!-- 已发货为空 -->
+  <empty-show
+    visible="{{ active === 1 && shipList.length === 0 && !loading }}"
+    icon="{{ msgShip.icon }}"
+    title="{{ msgShip.title }}"
+    buttons="{{ msgShip.buttons }}"
+    bind:click="buttonClicked"
+    data-active="{{ 0 }}"
+  />
 </view>
-
-<!-- 未发货为空 -->
-<empty-show
-  visible="{{ active === 0 && unShipList.length === 0 && !loading }}"
-  icon="{{ msgUnShip.icon }}"
-  title="{{ msgUnShip.title }}"
-  buttons="{{ msgUnShip.buttons }}"
-  bind:click="buttonClicked"
-  data-active="{{ 1 }}"
-/>
-
-<!-- 已发货为空 -->
-<empty-show
-  visible="{{ active === 1 && shipList.length === 0 && !loading }}"
-  icon="{{ msgShip.icon }}"
-  title="{{ msgShip.title }}"
-  buttons="{{ msgShip.buttons }}"
-  bind:click="buttonClicked"
-  data-active="{{ 0 }}"
-/>
 
 <van-submit-bar
   price="{{ total*100 }}"
