--- a/pages/ship/index.wxss
+++ b/pages/ship/index.wxss
@@ -1,5 +1,7 @@
 page{
   padding-top: 40px;
+  height: 100vh;
+  box-sizing: border-box;
 }
 
 .tab-box{
@@ -120,4 +122,15 @@ page{
     height: 0;
     opacity: 0;
   }
+}
+.touch-box{
+  height: 100%;
+}
+
+.icon-check .van-checkbox__icon{
+  width: 26px;
+  height: 26px;
+}
+.icon-check .van-checkbox__icon .van-icon{
+  line-height: 26px !important;
 }
